Fix background fragmentation bug on narrow screens

--- a/static/css/about-us.css
+++ b/static/css/about-us.css
@@ -23,6 +23,8 @@
 body {
     min-height: 100vh;
     background: linear-gradient(white, var(--bg-gradient-color));
+    background-size: cover;
+    background-attachment: fixed;
     overflow-x: hidden;
     overflow-y: scroll;
 }
